--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ a, .btn {
 } */
 
 /* spinny cube */
-.spinner-container {
+/* .spinner-container {
     position: absolute;
     top: 50px;
     left: 50px;
@@ -119,7 +119,7 @@ a, .btn {
     100% {
       transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
     }
-}
+} */
 
 /* DESKTOP NAV */
 nav, .nav-links {
@@ -137,33 +137,40 @@ nav {
 }
 
 .nav-links{
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
-    /* background: linear-gradient(#00010a,#00080f); */
-    background-color: rgba(0, 0, 0, 0.9);
-    /* background-image: url('../assets/sky.png');
-    background-size: cover;
-    background-position: center;
-    background-attachment: scroll; */
-    /* background: transparent; */
+    /* pos */
     position: fixed;
+    left: 50%;
+    top: 5%;
+    transform: translate(-50%, -50%);
+
+    /* dim */
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 50px;
     padding-right: 50px;
-    left: 50%;
-    top: 5%;
-    transform: translate(-50%, -50%);
+
+    /* style */
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.9);
     border: 0.1rem solid white;
     border-radius: 20px 20px 20px 20px;
     gap: 3rem;
     list-style: none;
     font-size: 1vw;
 
-    /* background-image: url('../assets/sky.png');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat; */
+    /* animation */
+    animation: navShow 1s;
+}
+
+@keyframes navShow {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -200px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
 }
 
 a {
@@ -181,6 +188,17 @@ a:hover {
 }
 
 /* LOGO */
+.logo-container.fixed {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    animation: none;
+}
+
+.logo:hover {
+    cursor: default;
+}
+
 .logo-container {
     position: fixed;
     top: 20px;
@@ -189,29 +207,51 @@ a:hover {
 }
 
 .logo {
+    text-align: center;
     font-size: 24px;
-    /* height: 40px;
-    width: 40px; */
     padding: 10px;
-    color: rgb(142, 210, 255); /* Change color as needed */
-    opacity: 0;
-    animation: showLogo 2s forwards, wiggle 2.5s;
+    color: rgb(142, 210, 255);
+    animation: showLogo 2s, openUp 5s;
     border: 0.1px solid white;
     border-radius: 10%;
 }
 
+/* socials */
+#socials-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0.5rem;
+    gap: 0.15rem;
+    animation: showLogo 2s;
+}
+
+/* icons */
+
+.icon {
+    width: 2rem;
+    height: auto;
+    transition: transform 800ms;
+}
+
+.icon:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 5px 2.5px rgba(102, 102, 102, 0.5);
+    border-radius: 50%;
+    
+}
+
 @keyframes showLogo {
     0% {
-        opacity: 0;
-        transform: translateY(-75px);
+        transform: translateY(-200px);
     }
     100% {
-        opacity: 1;
         transform: translateY(0);
     }
 }
 
-@keyframes wiggle {
+@keyframes openUp {
     0% {
         border: 0.1rem solid;
         border-radius: 45%;
@@ -222,21 +262,8 @@ a:hover {
     }
 }
 
-.content {
-    margin-top: 80px;
-}
-
-.logo-container.fixed {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    animation: none;
-}
 
 
-.logo:hover {
-    cursor: default;
-}
 
 /* HAMBURGER MENU */
 
@@ -442,14 +469,6 @@ section {
     text-shadow: 4px 4px 8px black;
 }
 
-/* socials */
-#socials-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-    gap: 1rem;
-}
-
 /* main pfp */
 .main-pfp {
     cursor: pointer;
@@ -491,21 +510,6 @@ section {
     100% {opacity: 0;}
 } */
 
-/* icons */
-
-.icon {
-    width: 2rem;
-    height: auto;
-    transition: transform 800ms;
-}
-
-.icon:hover {
-    transform: scale(1.2);
-    box-shadow: 0 0 5px 2.5px rgba(102, 102, 102, 0.7);
-    border-radius: 50%;
-    
-}
-
 /* BUTTONS */
 
 .btn-container {
@@ -534,6 +538,12 @@ section {
     border: rgb(95, 95, 95) 0.1rem solid;
     color: rgb(244,243,193);
 }
+
+.btn-color-1, .btn-color-2 {
+    opacity: 0;
+    animation: flyInLeft 1s forwards;
+    animation-delay: 3.5s;
+}
   
 .btn-color-1:hover, .btn-color-2:hover {
     box-shadow: 0 0 5px 5px rgba(5, 0, 0, 0.8);
@@ -542,44 +552,18 @@ section {
     border: white 0.1rem solid;
     background: white;
 }
-
-
-
   
 .btn-container {
     gap: 1rem;
 }
 
-/* button {
-    Variables
-    --button_radius: 0.75em;
-    --button_color: #e8e8e8;
-    --button_outline_color: #000000;
-    font-size: 17px;
-    font-weight: bold;
-    border: none;
-    border-radius: var(--button_radius);
-    background: var(--button_outline_color);
-  }
-  
-  .button_top {
-    display: block;
-    box-sizing: border-box;
-    border: 2px solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-  }
-  
-  button:hover .button_top {
-    Pull the button upwards when hovered
-    transform: translateY(-0.33em);
-  }
-  
-  button:active .button_top {
-    Push the button downwards when pressed
-    transform: translateY(0);
-  } */
+@keyframes flyInLeft {
+    0% {
+        transform: translateX(150%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
