--- a/src/style.css
+++ b/src/style.css
@@ -184,9 +184,21 @@ a {
 
 a:hover {
     color: grey;
+    /* background-color: blue;
+    border-radius: 50%;
     text-decoration: underline;
-    text-underline-offset: 0.5rem;
+    text-underline-offset: 0.5rem; */
     text-decoration-color: rgb(181, 181, 181);
+}
+
+.nav-links li:first-child a {
+    display: inline-block; /* or display: block; */
+    transition: transform 0.3s ease;
+}
+
+.nav-links li:first-child a:hover {
+    transform: rotate(-45deg);
+    text-decoration: none;
 }
 
 /* LOGO */
@@ -287,6 +299,19 @@ a:hover {
     z-index: 10000;
 }
 
+
+.hamburger-icon.open span:nth-child(1) {
+    transform: translateX(-12px) rotate(45deg) translate(18px, 0px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-icon.open span:nth-child(3) {
+    transform: translateX(-12px) rotate(-45deg) translate(18px, 0px); 
+}
+
 .hamburger-icon span {
     position: absolute;
     height: 4px;
@@ -307,8 +332,8 @@ a:hover {
     right: 0;
     transform: translateY(-50%);
     width: 30px;
-    /* opacity: 0; */
-    /* animation: showLeftt 1s forwards;
+    /* opacity: 0; 
+    animation: showLeftt 1s forwards;
     animation-delay: 0.25s; */
     
 }
@@ -325,8 +350,8 @@ a:hover {
 
 .hamburger-icon span:nth-child(3) {
     bottom: 0;
-    /* opacity: 0; */
-    /* animation: showLeft 1s forwards;
+    /* opacity: 0;
+    animation: showLeft 1s forwards;
     animation-delay: 0.5s; */
 }
 
@@ -334,25 +359,14 @@ a:hover {
     0% {
         transform: translateX(150%);
         opacity: 0;
+        transition: transform 0.3s ease;
     }
     100% {
         transform: translateX(0);
         opacity: 1;
+        transition: transform 0.3s ease;
     }
 } */
-
-.hamburger-icon.open span:nth-child(1) {
-    transform: translateX(-12px) rotate(45deg) translate(18px, 0px);
-}
-
-.hamburger-icon.open span:nth-child(2) {
-    opacity: 0;
-
-}
-
-.hamburger-icon.open span:nth-child(3) {
-    transform: translateX(-12px) rotate(-45deg) translate(18px, 0px); 
-}
 
 .menu-links {
     position: fixed;
@@ -360,6 +374,8 @@ a:hover {
     right: 5px;
     width: calc(100vw - 25px);
     background-color: rgba(51, 51, 51, 0.955);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     border-radius: 5px;
     border: transparent;
     overflow: hidden;
@@ -430,7 +446,7 @@ section {
 
 .section__text {
     align-self: center;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 /* intro */
@@ -600,4 +616,160 @@ section {
         transform: translateX(0);
         opacity: 1;
     }
+}
+
+/* sliders */
+
+.slider {
+    overflow: hidden;
+    height: auto;
+    width: 50vw;
+    min-width: 450px;
+}
+
+.slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    animation: 20s slider infinite;
+}
+
+.slider figure img {
+    float: left;
+    width: 20%;
+}
+
+@keyframes slider {
+    0% {left: 0;}
+    20% {left: 0;}
+    25% {left: -100%;}
+    45% {left: -100%;}
+    50% {left: -200%;}
+    70% {left: -200%;}
+    75% {left: -300%;}
+    95% {left: -300%;}
+    100% {left: -400%;}
+}
+
+/* PROJECTS SECTION */
+
+.about-containers {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.details-container-color-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+    gap: 5rem;
+    /* aspect-ratio: 9 / 9; */
+}
+
+.projects-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: auto;
+  }
+  
+.experience-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+  
+.details-container-color-container:nth-child(even) {
+    flex-direction: row-reverse;
+}
+  
+/* Ensure image is not wider than its container */
+.project-img {
+    max-width: 100%;
+}
+
+/* EXPERIENCE SECTION */
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+  
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+  
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+  
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+  
+article .icon {
+    cursor: default;
+}
+
+/* FAQ SECTION */
+
+/* CONTACT SECTION */
+  
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon {
+    height: 2.5rem;
 }
